# NEXUS-Intelligent-Multi-LLM-Orchestrator

./: README.md  main.py  pyproject.toml  requirements.txt
eval/: e2e_benchmark_20260227_063029.json  e2e_benchmark_latest.csv
src/agents/: aggregator.py  classifier.py  hitl.py  judge.py  knn_router.py  worker.py
src/api/: main.py
src/core/: config.py  graph.py  metrics.py  prototypes.py  state.py
src/eval/: benchmark.py  e2e_benchmark.py
src/ui/: app.py
